scode/surfers/prob6/error.txt
main.cpp:20:1: error: '::main' must return 'int'
   20 | void main ()
      | ^~~~
